fix: text overflow issue

--- a/src/features/dashboard/components/AppsTable/responsive-table.scss
+++ b/src/features/dashboard/components/AppsTable/responsive-table.scss
@@ -21,6 +21,7 @@
     &_row {
       text-align: start;
       justify-content: start;
+      overflow-wrap: anywhere;
     }
   }
   .redirect_url {
